@@ -1,3 +1,7 @@
+1998-05-19  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* strerror.c: New file.  Imported from GNU libiberty.
+
 1998-05-19  Martin Baulig  <martin@home-of-linux.org>
 
 	* vsnprintf.c (vsnprintf): Added prototype for systems
